--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <h2>Colaboradores:</h2>
                     <i class="fa fa-close" style="color:white"></i>
                 </div>
-                
+                <i><a href="https://github.com/Chugani05">Rashi Chugani Narwani （っ＾▿＾）</a></i>
             </div>
 <!---->
 
